# bgobs

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GENERATED.md  NOTICE  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  buildspec.json  buildspec.props  vcpkg-configuration.json  vcpkg.json
.devcontainer/debian-forky/: Dockerfile  devcontainer.json
.devcontainer/ubuntu-resolute/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  dependencies-vcpkg.lock.yml  ort-build-macos.yml  ort-build-ubuntu.yml  ort-build-windows.yml  ort.yml  pages.yml  plugin-build-macos.yml  plugin-build-ubuntu.yml  plugin-build-windows.yml  plugin-release.yml  plugin.yml  publish-windows-release.yml  scripts.yml  validate-pr.lock.yml
crates/bgobs-core/: Cargo.toml
crates/bgobs-core/include/: bgobs_core.h
crates/bgobs-core/src/: ffi.rs  lib.rs  mask.rs
data/: config.json  manifest.json
data/effects/: mask_alpha_filter.effect
data/locale/: ar-EG.ini  bn-IN.ini  en-US.ini  es-SP.ini  fr-FR.ini  hi-IN.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pt-BR.ini  ru-RU.ini  ta-IN.ini  tr-TR.ini  zh-CN.ini
docs/: ARCHITECTURE.md  BUG-REPORTING.md  BUILDING-CUDA-LINUX.md  BUILDING-FEDORA.md  BUILDING-OPENSUSE.md  CACAM-USB-PROTOCOL.md  DEVELOPMENT.md  LOCAL-OBS-LINUX.md  MASK-POST-PROCESSING.md  PRIVATE-DEVELOPMENT.md  README.md  RELEASING.md  WINDOWS-PORTABLEAPPS.md
packaging/pkg/: Distribution.xml.in
pages/: astro.config.mjs  package-lock.json  package.json
pages/public/: favicon.svg.license
pages/src/components/: FileVerifierDropArea.ts  FileVerifierResultDialog.ts
pages/src/layouts/: Layout.astro  MarkdownLayout.astro
pages/src/lib/: file-verification.d.ts  file-verification.mjs  info.ts  releases.ts
pages/src/pages/: 404.astro  arch.md  flatpak.astro  index.astro  macos.astro  support.astro  ubuntu.astro  uninstall.md  usage.astro  windows.astro
pages/src/pages/dev/: index.astro  macos.md  ubuntu.md  windows.md
pages/src/pages/metadata/: latest-version.txt.ts
pages/src/pages/versions/: [version].astro  index.astro
pages/src/styles/: global.css
pages/tests/: file-verification.test.mjs
release-notes/: v0.3.10.md  v0.3.11.md  v0.3.12.md  v0.3.13.md  v0.3.14.md  v0.3.15.md  v0.3.16.md  v0.3.17.md  v0.3.18.md  v0.3.19.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md
scripts/: build_obs_macos.sh  build_onnxruntime_macos.sh  build_ort_ubuntu.sh  build_ort_windows.ps1  generate_release_metadata.py  lipo_vcpkg_macos.sh  package_plugin_windows.ps1  validate_package.py
scripts/ort_patches/: REUSE.toml
scripts/windows/: How to install plugin on Windows.txt  install-portable.bat  remove-old-installation.bat
src/: DelayLoad.cpp  background-filter-info.c  background-filter.cpp  cacam-usb-source-info.c  cacam-usb-source.cpp  cacam-usb-source.hpp  consts.h  enhance-filter-info.c  enhance-filter.cpp  plugin-main.c  plugin-support.c  plugin-support.h
src/background/: mask-post-processing.cpp  mask-post-processing.hpp
src/models/: Model.hpp
src/obs-utils/: obs-config-utils.cpp  obs-config-utils.hpp  obs-utils.hpp
src/ort-utils/: ort-session-utils.cpp  ort-session-utils.hpp
src/update-checker/: github-utils.cpp  semver.cpp  semver.hpp  update-checker.cpp  update-checker.h
src/update-checker/CurlClient/: CMakeLists.txt  CurlClient.cpp
tests/background/: mask-post-processing-test.cpp
tests/update-checker/: semver-test.cpp
vcpkg-triplets/: arm64-osx-obs-asan.cmake  arm64-osx-obs.cmake  x64-osx-obs-asan.cmake  x64-osx-obs.cmake
